# buffalo-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  buffalo_standalone.py  configs.py  coral-agent.toml  custom_types.py  docker-compose.yml  main.py  pyproject.toml  qa_tools.py  qa_util.py  registry.toml  test_browser.py
